courses/430_programming-languages/assignment-6/tests/error/hw5_error05.nex
  fun f() : none
  {
    if (3) { print(1); print(":n"); }
  }
print "should not get here:n";
1 / 0;
   f();
